[package]
name = "socket-tunnel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "cmd/server.rs"

[[bin]]
name = "agent"
path = "cmd/agent.rs"

[dependencies]
pingora = { version = "0.6.0" }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
