[package]
name = "socket-tunnel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "cmd/server.rs"

[[bin]]
name = "agent"
path = "cmd/agent.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "*" }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
axum = { version = "0.8.6", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio-tungstenite = "0.28.0"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1.1", features = ["client-legacy"] }
base64 = "0.22.1"
http-body-util = "0.1.3"
bytes = "1.4.0"
